--- a/src/styles/sass/components/postevent/_subscriberinput.sass
+++ b/src/styles/sass/components/postevent/_subscriberinput.sass
@@ -31,6 +31,7 @@
     &__container
         position: relative
         display: inline-block
+        top: -3px
         &_inputbox
             @include input
             &:focus
@@ -63,14 +64,14 @@
             opacity: 0
         &_submitbutton 
             padding: 1.25rem 2.75rem
-            position: absolute
+            position: static
             border-radius: 5rem
             text-transform: uppercase
             background: linear-gradient(-22deg, #711F73, #3d027c)
             border: 0
             display: block
-            right: 347.5px
-            top: 26.5px
+            margin: auto
+            margin-top: -.25em
             color: white
             transform: translateY(-1px)
             transition: opacity 0.4s ease .27s, transform 0.2s ease, 0.8s filter ease
